# touchline

./: .gitattributes  .gitignore  .vercelignore  Anchor.toml  README.md  package-lock.json  package.json  vercel.json
.github/workflows/: pages.yml
docs/: ARCHITECTURE.md
idls/: mock_oracle.json
programs/mock_oracle/: Cargo.toml
programs/mock_oracle/src/: lib.rs
programs/touchline/: Cargo.toml
programs/touchline/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/touchline/src/instructions/: cancel_offer.rs  create_market.rs  fill_offer.rs  post_offer.rs  settle.rs
programs/touchline/tests/: settlement.rs  spike.rs  venue.rs
scripts/: gen-client.mjs  seed-arena.ts
